welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:15: error: not found: value doite
  doite()
  ^